Release redis stream coordinator 0.3.1
